2020-11-07  Simon Fraser  <simon.fraser@apple.com>

        REGRESSION (r268476): Sometimes zooming does not worki on purpleair.com/map
        https://bugs.webkit.org/show_bug.cgi?id=218680

        Reviewed by Zalan Bujtas.

        * fast/scrolling/mac/wheel-event-listener-region-tiled-layer-switch-expected.txt: Added.
        * fast/scrolling/mac/wheel-event-listener-region-tiled-layer-switch.html: Added.

2020-11-06  Simon Fraser  <simon.fraser@apple.com>

        Programmatic scrolls need updated scrolling geometry
        https://bugs.webkit.org/show_bug.cgi?id=218676

        Reviewed by Tim Horton.

        * fast/scrolling/mac/programmatic-scroll-overrides-rubberband-expected.txt: Added.
        * fast/scrolling/mac/programmatic-scroll-overrides-rubberband.html: Added.

2020-11-06  Andres Gonzalez  <andresg_22@apple.com>

        Fix for LayoutTests/accessibility/Mac/accesskey.html in isolated tree mode.
        https://bugs.webkit.org/show_bug.cgi?id=218669

        Reviewed by Chris Fleizach.

        Re-wrote this test to work in both isolated tree mode on and off.

        * accessibility/mac/accesskey-expected.txt:
        * accessibility/mac/accesskey.html:

2020-11-06  Dmitry Bezhetskov  <dbezhetskov@igalia.com>

        [WASM-References] Rename anyref to externref
        https://bugs.webkit.org/show_bug.cgi?id=218331

        Reviewed by Keith Miller.

        * workers/wasm-references/test.js:

2020-11-06  Joey Arhar  <jarhar@chromium.org>

        Text gets clobbered when assigning to input.defaultValue
        https://bugs.webkit.org/show_bug.cgi?id=217156

        Disabling fast/forms/defaultValue-clobbering.html since it fails on
        iOS

        Reviewed by Darin Adler.

        * platform/ios/TestExpectations:

2020-11-06  Chris Dumez  <cdumez@apple.com>

        Event targets should be cleared after dispatch if target pointed to a shadow tree
        https://bugs.webkit.org/show_bug.cgi?id=218638

        Reviewed by Darin Adler.
