@@ -1,0 +1,1 @@
+The test passes if WebKit doesn't crash or hit an assertion.
