@@ -1,0 +1,13 @@
+<style>
+font { -webkit-box-orient: vertical; -webkit-line-clamp: 1; display: -webkit-box; padding: 69%; }
+h2 { float: right; }
+</style>
+<script>
+if (window.testRunner)
+    testRunner.dumpAsText();
+</script>
+<font>
+<shadow>
+<h2></h2>
+<keygen>
+<p>The test passes if WebKit doesn't crash or hit an assertion.</p>
