@@ -1,3 +1,15 @@
+2020-11-08  Rob Buis  <rbuis@igalia.com>
+
+        Add testcase for r269537
+        https://bugs.webkit.org/show_bug.cgi?id=218499
+
+        Reviewed by Ryosuke Niwa.
+
+        I forgot to add a testcase in r269537.
+
+        * fast/overflow/line-clamp-crash-expected.txt: Added.
+        * fast/overflow/line-clamp-crash.html: Added.
+
 2020-11-07  Simon Fraser  <simon.fraser@apple.com>
 
         REGRESSION (r268476): Sometimes zooming does not worki on purpleair.com/map
